--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.5.4",
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.7",
     "express": "^4.17.1",
     "firebase-admin": "^8.8.0",
@@ -24,6 +25,6 @@
     "telegraf": "^3.36.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.4"
   }
 }
